Changed style and paragraph

--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
+    <link rel="stylesheet" href="styles.CSS">
+
+
 </head>
+<h1 style="color: rgb(0, 0, 0);">About me</h1>
 <body>
-  <p>Hello! My name is Sanah White and I'm 16 years old. </p>  
+  <p>Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a sort of balance.      </p>
+  
 </body>
 </html>
