--- a/contactme.html
+++ b/contactme.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me</title>
+    <link rel="stylesheet" href="styles.CSS">
 </head>
 <body>
-    
+    <h1>Contact me</h1>
 </body>
 </html>
