--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -9,9 +9,24 @@
 
 
 </head>
-<h1 style="color: rgb(0, 0, 0);">About me</h1>
 <body>
-  <p>Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a sort of balance.  </p>
+  <nav class="navBar">
+   <a href="index.html">Homepage</a>
+
+    <a href="projects.html">Projects</a>
+
+    <a href="resume.html">Resume</a>
+
+    <a href="contactme.html">Contact Me</a>
+  </nav>
   
+  <h1 style="color: #2a103a;" <h1>About me</h1>
+  <p>Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a balance. </p>
+  <a href=""></a>
+<br>
+<br>
+
+<h2>Interest</h2>
+<p></p>
 </body>
 </html>
