--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Sanah White</title>
 </head>
 <body>
+<nav>
+    <a href="index.html">Homepage</a>
 
+    <a href="aboutme_interest.html">About me/interest</a>
+
+    <a href="projects.html">Projects</a>
+
+    <a href="resume.html">Resume</a>
+
+    <a href="contactme.html">Contact Me</a>
+
+   </nav>
 </body>
 </html>
