more styles like Class++

--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -20,13 +20,22 @@
     <a href="contactme.html">Contact Me</a>
   </nav>
   
-  <h1 style="color: #2a103a;" <h1>About me</h1>
-  <p>Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a balance. </p>
+  <h1> <class="textblack"<h1>About me</h1>
+  <p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a balance. </p>
   <a href=""></a>
 <br>
 <br>
 
 <h2>Interest</h2>
-<p></p>
+
+<li> Playing video games mainly story games because they really capture my interest and keep me wondering about it for a while.</li>
+<br>
+<br>
+
+<li>Music is something I'm deeply interested in I listen to it everywhere I go and no matter what I'm doing whether it's coding or even sleeping it's being played. </li>
+<br>
+<br>
+<li>Tech is also a big deal when it comes to my interest I like the software part more than the hardware even though they meet togther in the end  </li>
+
 </body>
 </html>
