--- a/projects.html
+++ b/projects.html
@@ -21,5 +21,8 @@
      <a href="contactme.html">Contact Me</a>
    </nav>
     <h1>Projects</h1>
+    <li>PC building</li>
+    <li>Adventure game</li>
+    <li></li>
 </body>
 </html>
