--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -21,6 +21,12 @@
   </nav>
   
   <h1> <class="textblack"<h1>About me</h1>
+  
+  <img src="1000018705.jpg" width="190">
+  <!-- Temporary spot for picture -->
+  <!-- Will be moved when intro is-->
+  <br>
+  <br>
   <p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a balance. </p>
   <a href=""></a>
 <br>
