--- a/contactme.html
+++ b/contactme.html
@@ -27,16 +27,15 @@
     <p>Want to reach out?</p>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
+    
     <!-- <put an image of gmail icon that links to sending an email or something idk -->
 
     </div>
-<img src="gmaillll.png"
-    <br>
-    <br>
-    <ul>swhite2@brooklynsteamcenter.org</ul>
-
+    <center>
+    <img src="gmaillll.png" width="180">
+    
+    <p id="contactme1">swhite2@brooklynsteamcenter.org</p>
+    </center>
+   
 </body>
 </html>
