--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,15 @@
    </nav>
     <h1>Projects</h1>
     <li>PC building</li>
+    <br>
+    <br>
     <li>Adventure game</li>
-    <li></li>
+    <br>
+    <br>
+
+    <li>Horror games website</li>
+    <br>
+    <br>
+    <li>Security floor plan</li>
 </body>
 </html>
