--- a/projects.html
+++ b/projects.html
@@ -22,13 +22,16 @@
    </nav>
     <h1>Projects</h1>
     <li>PC building</li>
+    <ul>I had to learn about PC parts in order to build the PC from scratch.The building process was started september 26 2024 and finished October 9th. </ul>
     <br>
     <br>
     <li>Adventure game</li>
+     <ul>My adventure was a text based game is called 'Forest Survival' that had to code using python. It was based off a show called 'Yellowjackets' where a plane crashes and they have to survive and provide for themselves until help arrives.</ul>
     <br>
     <br>
 
     <li>Horror games website</li>
+    <ul>This website was about my top 5 horror games because playing those is apart of my hobby. It made with the use of HTML and CSS the overall. This is my first website and it wasn't hard to make it's just time consuming especially when it's your first </ul>
     <br>
     <br>
     <li>Security floor plan</li>
