--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -19,16 +19,21 @@
 
     <a href="contactme.html">Contact Me</a>
   </nav>
-  
+  <center>
   <h1> <class="textblack"<h1>About me</h1>
   
-  <img src="1000018705.jpg" width="190">
+  
+  <img src="facepic.jpg" width="350">
+  </center>
   <!-- Temporary spot for picture -->
   <!-- Will be moved when intro is-->
   <br>
   <br>
-  <p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a balance. </p>
-  <a href=""></a>
+  <center>
+  
+<p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a balance. I've interested in coding since I was 12 years old and just tech in general and hope to because a software developer or software engineer </p>
+ </center>
+<a href=""></a>
 <br>
 <br>
 
