--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,9 @@
  
      <a href="contactme.html">Contact Me</a>
    </nav>
+   <center>
     <h1>Projects</h1>
+    </center>
     <li>PC building</li>
     <ul>I had to learn about PC parts in order to build the PC from scratch.The building process was started september 26 2024 and finished October 9th. </ul>
     <br>
@@ -32,8 +34,6 @@
 
     <li>Horror games website</li>
     <ul>This website was about my top 5 horror games because playing those is apart of my hobby. It made with the use of HTML and CSS the overall. This is my first website and it wasn't hard to make it's just time consuming especially when it's your first </ul>
-    <br>
-    <br>
-    <li>Security floor plan</li>
+    
 </body>
 </html>
