--- a/projects.html
+++ b/projects.html
@@ -24,12 +24,18 @@
     <h1>Projects</h1>
     </center>
     <li>PC building</li>
-    <ul>I had to learn about PC parts in order to build the PC from scratch.The building process was started september 26 2024 and finished October 9th. </ul>
-    <br>
-    <br>
+    <ul>I had to learn about PC parts in order to build the PC from scratch and it was my first big project. This was my first build so it did take me a while. Every part was relatively easy except putting the CPU fan in I was afraid that I was going to push down too hard and cause a hairline fracture to the motherboard but I got it in the end. Turning it on the for the first time was very nerve racking as I wasn't sure it was going to power on because of one little issue thankfully it did.  </ul>
+    
+    
+    <center>
+    <img src="145.preview.jpg" width="300" height="400">
+    </center>
     <li>Adventure game</li>
-     <ul>My adventure was a text based game is called 'Forest Survival' that had to code using python. It was based off a show called 'Yellowjackets' where a plane crashes and they have to survive and provide for themselves until help arrives.</ul>
-    <br>
+     <ul>My adventure was a text based game is called 'Forest Survival' that had to code using the language python. It's about a soccer team being on the plane and it crashes in a forest everyone survives but now they're stranded with no outside contact and have to make a living until help arrives.  </ul>
+    <center>
+     <img src="Screenshot 2025-02-22 223331.png" width="600"
+    </center>
+     <br>
     <br>
 
     <li>Horror games website</li>
