--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -32,7 +32,7 @@
   <center>
   
 <p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a balance. I've interested in coding since I was 12 years old and just tech in general and hope to because a software developer or software engineer </p>
- </center>
+  </center>
 <a href=""></a>
 <br>
 <br>
@@ -42,6 +42,11 @@
 <li> Playing video games mainly story games because they really capture my interest and keep me wondering about it for a while.</li>
 <br>
 <br>
+<img src="Sh3_boxart.jpg"
+<br>
+<br>
+
+<img src="ACOdysseyCoverArt.png" width="224"
 
 <li>Music is something I'm deeply interested in I listen to it everywhere I go and no matter what I'm doing whether it's coding or even sleeping it's being played. </li>
 <br>
