--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -42,11 +42,12 @@
 <li> Playing video games mainly story games because they really capture my interest and keep me wondering about it for a while.</li>
 <br>
 <br>
-<img src="Sh3_boxart.jpg"
-<br>
-<br>
+<img src="Sh3_boxart.jpg">
 
-<img src="ACOdysseyCoverArt.png" width="224"
+<img src="ACOdysseyCoverArt.png" width="220">
+<br>
+<br>
+<br>
 
 <li>Music is something I'm deeply interested in I listen to it everywhere I go and no matter what I'm doing whether it's coding or even sleeping it's being played. </li>
 <br>
