--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -25,8 +25,7 @@
   
   <img src="facepic.jpg" width="350">
   </center>
-  <!-- Temporary spot for picture -->
-  <!-- Will be moved when intro is-->
+  
   <br>
   <br>
   <center>
@@ -34,25 +33,39 @@
 <p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a balance. I've interested in coding since I was 12 years old and just tech in general and hope to because a software developer or software engineer </p>
   </center>
 <a href=""></a>
-<br>
-<br>
 
+
+<center>
+  <div class="box2"
 <h2>Interest</h2>
+</center>
 
+<div class="center box">
 <li> Playing video games mainly story games because they really capture my interest and keep me wondering about it for a while.</li>
 <br>
 <br>
-<img src="Sh3_boxart.jpg">
+
+<img src="Sh3_boxart.jpg" width="230">
 
 <img src="ACOdysseyCoverArt.png" width="220">
-<br>
-<br>
-<br>
 
-<li>Music is something I'm deeply interested in I listen to it everywhere I go and no matter what I'm doing whether it's coding or even sleeping it's being played. </li>
+<img src="LIS.jpeg" width="203">
+</div>
 <br>
 <br>
+   
+<li>Music plays a big part in my life and no matter what I'm doing music is being played. My top genres are usually Rock, R&B and Rap but I listen to generally anything.</li>
+</center>
+<br>
+<br>
+<div>
+ 
+  <img src="PND1.jpeg" height="235">
+  <img src="DEFTONES.webp" width="200">
+ 
+  <img src="FLESHWATER.jpeg" width="235"
+</div>
 <li>Tech is also a big deal when it comes to my interest I like the software part more than the hardware even though they meet togther in the end  </li>
-
+<!-- CHANGE THIS HOBBY -->
 </body>
 </html>
