--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -53,7 +53,13 @@
 </div>
 <br>
 <br>
-   
+
+
+</div>
+<center>
+  
+   <h2>Music</h2>
+   </center>
 <li>Music plays a big part in my life and no matter what I'm doing music is being played. My top genres are usually Rock, R&B and Rap but I listen to generally anything.</li>
 </center>
 <br>
@@ -61,11 +67,25 @@
 <div>
  
   <img src="PND1.jpeg" height="235">
+  
   <img src="DEFTONES.webp" width="200">
  
-  <img src="FLESHWATER.jpeg" width="235"
+  <img src="FLESHWATER.jpeg" width="235">
+  <img src="RADIOHEAD.jpg" width="234">
+<img src="CFM.jpg" width="235"
 </div>
-<li>Tech is also a big deal when it comes to my interest I like the software part more than the hardware even though they meet togther in the end  </li>
-<!-- CHANGE THIS HOBBY -->
+<br>
+<br>
+<center>
+  <div class="center box"
+<h2>Biking</h2>
+</center>
+<div class="box2"
+<li> Biking is my favorite thing to do as it's a calming experince and it's something that will get you outside more and explore new places. </li>
+<div>
+  <img src="47.preview.jpg" width="250">
+  <img src="849.preview.jpg" width="250"
+</div>
+ 
 </body>
 </html>
