--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
-    <link rel="stylesheet" href="styles.CSS">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About me</title>
+  <link rel="stylesheet" href="styles.CSS">
 
 
 </head>
+
 <body>
   <nav class="navBar">
-   <a href="index.html">Homepage</a>
+    <a href="index.html">Homepage</a>
 
     <a href="projects.html">Projects</a>
 
@@ -20,72 +22,95 @@
     <a href="contactme.html">Contact Me</a>
   </nav>
   <center>
-  <h1> <class="textblack"<h1>About me</h1>
-  
-  
-  <img src="facepic.jpg" width="350">
+    <h1>
+      <class="textblack"<h1>About me
+    </h1>
+
+
+    <img src="facepic.jpg" width="350">
   </center>
-  
+
   <br>
   <br>
   <center>
-  
-<p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created this website along to explain a little about myself in a personal and professional way creating a balance. I've interested in coding since I was 12 years old and just tech in general and hope to because a software developer or software engineer </p>
+
+    <p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created
+      this website along to explain a little about myself in a personal and professional way creating a balance. I've
+      interested in coding since I was 12 years old and just tech in general and hope to because a software developer or
+      software engineer </p>
   </center>
-<a href=""></a>
+  <a href=""></a>
 
 
-<center>
-  <div class="box2"
-<h2>Interest</h2>
-</center>
+  <center>
+    <div class="box2" <h2>Interest</h2>
+  </center>
 
-<div class="center box">
-<li> Playing video games mainly story games because they really capture my interest and keep me wondering about it for a while.</li>
-<br>
-<br>
+  <div class="center box">
+    <li> Playing video games mainly story games because they really capture my interest and keep me wondering about it
+      for a while.</li>
+    <br>
+    <br>
 
-<img src="Sh3_boxart.jpg" width="230">
+    <img src="Sh3_boxart.jpg" width="230">
 
-<img src="ACOdysseyCoverArt.png" width="220">
+    <img src="ACOdysseyCoverArt.png" width="220">
 
-<img src="LIS.jpeg" width="203">
-</div>
-<br>
-<br>
+    <img src="LIS.jpeg" width="203">
+  </div>
+  <br>
+  <br>
 
 
-</div>
-<center>
+  </div>
+  <center>
+
+    <h2>Music</h2>
+  </center>
+  <li>Music plays a big part in my life and no matter what I'm doing music is being played. My top genres are usually
+    Rock, R&B and Rap but I listen to generally anything.</li>
+  </center>
+  <br>
+  <br>
   
-   <h2>Music</h2>
-   </center>
-<li>Music plays a big part in my life and no matter what I'm doing music is being played. My top genres are usually Rock, R&B and Rap but I listen to generally anything.</li>
-</center>
-<br>
-<br>
-<div>
- 
-  <img src="PND1.jpeg" height="235">
-  
-  <img src="DEFTONES.webp" width="200">
- 
-  <img src="FLESHWATER.jpeg" width="235">
-  <img src="RADIOHEAD.jpg" width="234">
-<img src="CFM.jpg" width="235"
-</div>
-<br>
-<br>
-<center>
-  <div class="center box"
-<h2>Biking</h2>
-</center>
-<div class="box2"
-<li> Biking is my favorite thing to do as it's a calming experince and it's something that will get you outside more and explore new places. </li>
-<div>
-  <img src="47.preview.jpg" width="250">
-  <img src="849.preview.jpg" width="250"
-</div>
- 
+  <div class="DEFTONESS">
+    <div>
+      <img src="PND1.jpeg" height="235">
+    </div>
+
+    <div>
+      <img src="DEFTONES.webp" width="200">
+      <p>DEFTONES</p>
+    </div>
+
+    <div>
+      <img src="FLESHWATER.jpeg" width="235">
+    </div>
+    <div>
+      <img src="RADIOHEAD.jpg" width="234">
+    </div>
+
+    <div>
+
+      <img src="CFM.jpg" width="235">
+      <p>SABA</p>
+    
+    </div>
+
+  </div>
+  <br>
+  <br>
+  <center>
+    <div class="center box" <h2>Biking</h2>
+  </center>
+  <div class="box2" <li> Biking is my favorite thing to do as it's calming and it'll something that will get you outside
+    more and explore new places. </li>
+    <div>
+      <img src="47.preview.jpg" width="250">
+      <img src="849.preview.jpg" width="250">
+      <img src="20250225_174321.jpg" width="250" </div>
+
+    
 </body>
+
 </html>
