--- a/contactme.html
+++ b/contactme.html
@@ -30,12 +30,13 @@
     
     <!-- <put an image of gmail icon that links to sending an email or something idk -->
 
-    </div>
+   
     <center>
+    <div class="IMAGES">
     <img src="gmaillll.png" width="180">
     
-    <p id="contactme1">swhite2@brooklynsteamcenter.org</p>
+    <p id="contactme1">EMAIL</p>
     </center>
-   
+</div>
 </body>
 </html>
