--- a/projects.html
+++ b/projects.html
@@ -45,10 +45,13 @@
      <br>
     <br>
 
-    <div>
+    <div class="PROJECTSS">
+        <div>
     <li>Horror games website</li>
-    <ul>This website was about my top 5 horror games because playing those is apart of my hobby. It made with the use of HTML and CSS the overall. This is my first website and it wasn't hard to make it's just time consuming and a lot of patience is needed. </ul>
-    <img src="SCREENSHOT.png" width="600">
+   
+ <ul>This website was about my top 5 horror games because playing those is apart of my hobby. It made with the use of HTML and CSS the overall. This is my first website and it wasn't hard to make it's just time consuming and a lot of patience is needed. </ul>
+</div>
+ <img src="SCREENSHOT.png" width="600">
 </div>
     </center>
 
