--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -37,9 +37,9 @@
     <p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created
       this website along to explain a little about myself in a personal and professional way creating a balance. I've
       interested in coding since I was 12 years old and just tech in general and hope to because a software developer or
-      software engineer </p>
+      software engineer. </p>
   </center>
-  <a href=""></a>
+ 
 
 
   <center>
