--- a/contactme.html
+++ b/contactme.html
@@ -33,10 +33,44 @@
    
     <center>
     <div class="IMAGES">
-    <img src="gmaillll.png" width="180">
+   
     
-    <p id="contactme1">EMAIL</p>
     </center>
 </div>
+
+<form> 
+    <label>First name</label>
+    
+   
+    <input type="text" required name="First_name"/> 
+    <br>
+
+    <label>Last Name</label>
+
+    <input type="text" required name="Last_Name"/>
+    <br>
+
+   <label>Phone</label>
+<br>
+   <input type="tel" required name="phone">
+<br>
+   <label>Comments</label>
+   <br>
+   <textarea required name="comments"></textarea>
+
+</form>
+<button type="submit"><i data-lucide="send"></i></button>
+<a href="mailto:swhite@brooklynsteamcenter.org"</a>
+<i data-lucide="mail"></i>
+<a href="https://github.com"><i data-lucide="github"></i></a>
+
+<script src="https://unpkg.com/lucide@latest"></script>
+
+<script>
+    lucide.createIcons();
+
+  </script>
+
+ 
 </body>
 </html>
