--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     <a href="projects.html">Projects</a>
 <br>
 <br>
-    <a href="resume.html">Resume</a>
+    <a href="https://docs.google.com/document/d/1NLwBxrL_NofczEQjIW-FROqgCKLFOt8CcbCBzdPT8c4/edit?usp=sharing" target="_blank">Resume</a>
 <br>
 <br>
     <a href="contactme.html">Contact Me</a>
-
    </nav>
-   
+  
    
 </body>
 </html>
