--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="This is Sanah's first website. It serves to inform vistors about herself and the things that she has done as a new student developer."> 
+  <meta name="keywords" content="Student, developer, Sanah, White, Personal">
   <title>About me</title>
   <link rel="stylesheet" href="styles.CSS">
-
+  <link rel="shortcut icon" href="SILENTHILL3SAVEPOINT.jpeg" type="image/x-icon">
 
 </head>
 
@@ -17,7 +18,7 @@
 
     <a href="projects.html">Projects</a>
 
-    <a href="resume.html">Resume</a>
+    <a href="https://docs.google.com/document/d/1NLwBxrL_NofczEQjIW-FROqgCKLFOt8CcbCBzdPT8c4/edit?usp=sharing">Resume</a>
 
     <a href="contactme.html">Contact Me</a>
   </nav>
