--- a/index.html
+++ b/index.html
@@ -3,28 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is Sanah's first website. It serves to inform vistors about herself and the things that she has done as a new student developer."> 
+  <meta name="keywords" content="Student, developer, Sanah, White, personal">
     <title>Sanah White</title>
+   <link rel="shortcut icon" href="SILENTHILL3SAVEPOINT.jpeg" type="image/x-icon">
+   <link rel="stylesheet" href="styles.CSS">
 </head>
 <body>
    
-<nav>
-  <a href="index.html">Homepage</a>
-  <br>
-  <br>
+<nav class="navBar">
+
+  
 
     <a href="aboutme_interest.html">About me/interest</a>
- <br>
- <br>
+
     <a href="projects.html">Projects</a>
-<br>
-<br>
+
     <a href="https://docs.google.com/document/d/1NLwBxrL_NofczEQjIW-FROqgCKLFOt8CcbCBzdPT8c4/edit?usp=sharing" target="_blank">Resume</a>
-<br>
-<br>
+
+
     <a href="contactme.html">Contact Me</a>
    </nav>
   
+
+   <h1 class="bold">HOME</h1>
+<hr color="#ffd0d0" size="5" width="1000"
+
+
+    <p>Welcome! </p>
    
 </body>
 </html>
