--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="This is Sanah's first website. It serves to inform vistors about herself and the things that she has done as a new student developer."> 
   <meta name="keywords" content="Student, developer, Sanah, White, Personal">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>About me</title>
   <link rel="stylesheet" href="styles.CSS">
   <link rel="shortcut icon" href="SILENTHILL3SAVEPOINT.jpeg" type="image/x-icon">
-
 </head>
-
 <body>
   <nav class="navBar">
     <a href="index.html">Homepage</a>
@@ -102,7 +102,7 @@
   <br>
   <br>
   <center>
-    <div class="center box" <h2>Biking</h2>
+    <div class="centerbox" <h2>Biking</h2>
   </center>
   <div class="box2" <li> Biking is my favorite thing to do as it's calming and it'll something that will get you outside
     more and explore new places. </li>
