--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   
     <meta name="description" content="This is Sanah's first website. It serves to inform vistors about herself and the things that she has done as a new student developer."> 
-  <meta name="keywords" content="Student, developer, Sanah, White, personal">
+    <meta name="keywords" content="Student, developer, Sanah, White, personal">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanah White</title>
    <link rel="shortcut icon" href="SILENTHILL3SAVEPOINT.jpeg" type="image/x-icon">
    <link rel="stylesheet" href="styles.CSS">
@@ -27,7 +29,7 @@
   
 
    <h1 class="bold">HOME</h1>
-<hr color="#ffd0d0" size="5" width="1000"
+<hr color="#ffd0d0" size="5" width="1000">
 
 
     <p>Welcome! </p>
