--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="This is Sanah's first website. It serves to inform vistors about herself and the things that she has done as a new student developer."> 
-  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Student, developer, Sanah, White, Personal ">
     <title>Projects</title>
     
@@ -44,7 +44,7 @@
     
      <ul>My adventure was a text based game is called 'Forest Survival' that had to code using the language python. It's about a soccer team being on the plane and it crashes in a forest everyone survives but now they're stranded with no outside contact and have to make a living until help arrives.  </ul>
     </div>
-     <img src="Screenshot 2025-02-22 223331.png" width="600">
+     <img src="Screenshot 2025-02-22 223331.png" width="300">
 </div>
      <br>
     <br>
@@ -55,7 +55,7 @@
    
  <ul>This website was about my top 5 horror games because playing those is apart of my hobby. It made with the use of HTML and CSS the overall. This is my first website and it wasn't hard to make it's just time consuming and a lot of patience is needed. </ul>
 </div>
- <img src="SCREENSHOT.png" width="600">
+ <img src="SCREENSHOT.png" width="300">
 </div>
     </center>
 
