--- a/index.html
+++ b/index.html
@@ -32,7 +32,30 @@
 <hr color="#ffd0d0" size="5" width="1000">
 
 
-    <p>Welcome! </p>
+  
    
+    <center>
+    <h1>
+      <class="textblack"<h1>About me
+    </h1>
+    
+<center>
+    <img src="facepic.jpg" width="350">
+  </center>
+
+  <br>
+  <br>
+  <center>
+
+    <p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created
+      this website along to explain a little about myself in a personal and professional way creating a balance. I've
+      interested in coding since I was 12 years old and just tech in general and hope to because a software developer or
+      software engineer. </p>
+  </center>
+ 
+
+
+
+
 </body>
 </html>
