--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,8 @@
     <div class="PROJECTSS">
         <div>
             <center>
-    <li>PC building</li>
-    <ul>I had to learn about PC parts in order to build the PC from scratch and it was my first big project. This was my first build so it did take me a while. Every part was relatively easy except putting the CPU fan in I was afraid that I was going to push down too hard and cause a hairline fracture to the motherboard but I got it in the end. Turning it on the for the first time was very nerve racking as I wasn't sure it was going to power on because of one little issue thankfully it did.  </ul>
+    <h2>PC building</h2>
+    <p>I had to learn about PC parts in order to build the PC from scratch and it was my first big project. This was my first build so it did take me a while. Every part was relatively easy except putting the CPU fan in I was afraid that I was going to push down too hard and cause a hairline fracture to the motherboard but I got it in the end. Turning it on the for the first time was very nerve racking as I wasn't sure it was going to power on because of one little issue thankfully it did.  </p>
 </div>
     
     <img src="145.preview.jpg" width="300" height="400">
@@ -40,9 +40,9 @@
    <br>
 <div class="PROJECTSS">
     <div>
-    <li>Adventure game</li>
+    <h2>Adventure game</h2>
     
-     <ul>My adventure was a text based game is called 'Forest Survival' that had to code using the language python. It's about a soccer team being on the plane and it crashes in a forest everyone survives but now they're stranded with no outside contact and have to make a living until help arrives.  </ul>
+     <p>My adventure was a text based game is called 'Forest Survival' that had to code using the language python. It's about a soccer team being on the plane and it crashes in a forest everyone survives but now they're stranded with no outside contact and have to make a living until help arrives.  </p>
     </div>
      <img src="Screenshot 2025-02-22 223331.png" width="300">
 </div>
@@ -51,9 +51,9 @@
 
     <div class="PROJECTSS">
         <div>
-    <li>Horror games website</li>
+    <h2>Horror games website</h2>
    
- <ul>This website was about my top 5 horror games because playing those is apart of my hobby. It made with the use of HTML and CSS the overall. This is my first website and it wasn't hard to make it's just time consuming and a lot of patience is needed. </ul>
+ <p>This website was about my top 5 horror games because playing those is apart of my hobby. It made with the use of HTML and CSS the overall. This is my first website and it wasn't hard to make it's just time consuming and a lot of patience is needed. </p>
 </div>
  <img src="SCREENSHOT.png" width="300">
 </div>
