--- a/contactme.html
+++ b/contactme.html
@@ -27,7 +27,7 @@
     <h1>Contact me</h1>
     
     <p>Thank you for viewing my website that is just about me</p>
-    <p>Want to reach out?</p>
+    <p> REACH OUT</p>
     <br>
     <br>
     
@@ -73,7 +73,11 @@
     lucide.createIcons();
 
   </script>
-
+  
+<details>
+<summary>Personal website</summary>
+<p>This webiste serves to educate it's visitors and catch their attetntion  </p>
+</details>
  
 </body>
 </html>
