--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Student, developer, Sanah, White, personal">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanah White</title>
-   <link rel="shortcut icon" href="SILENTHILL3SAVEPOINT.jpeg" type="image/x-icon">
+   <link rel="shortcut icon" href="savesquare.jpg" type="image/x-icon">
    <link rel="stylesheet" href="styles.CSS">
 </head>
 <body>
