--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -10,7 +10,7 @@
 
   <title>About me</title>
   <link rel="stylesheet" href="styles.CSS">
-  <link rel="shortcut icon" href="SILENTHILL3SAVEPOINT.jpeg" type="image/x-icon">
+  <link rel="shortcut icon" href="savesquare.jpg" type="image/x-icon">
 </head>
 <body>
   <nav class="navBar">
