--- a/contactme.html
+++ b/contactme.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me</title>
     <link rel="stylesheet" href="styles.CSS">
-    <link rel="shortcut icon" href="SILENTHILL3SAVEPOINT.jpeg" type="image/x-icon">
-</head>
+    <link rel="shortcut icon" href="savesquare.jpg" type="image/x-icon">
+  </head>
 <body>
     <nav class="navBar">
     
