--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
     <title>Projects</title>
     
     <link rel="stylesheet" href="styles.CSS">
-    <link rel="shortcut icon" href="SILENTHILL3SAVEPOINT.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="savesquare.jpg" type="image/x-icon">
 </head>
 <body>
     <nav class="navBar">
