--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </h1>
     
 <center>
-    <img src="facepic.jpg" width="350">
+<img src="20250227_120826.jpg" width="350">
   </center>
 
   <br>
