--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created
       this website along to explain a little about myself in a personal and professional way creating a balance. I've
-      interested in coding since I was 12 years old and just tech in general and hope to because a software developer or
+      interested in coding since I was 12 years old and just tech in general and hope to become a software developer or
       software engineer. </p>
   </center>
  
