--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </h1>
     
 <center>
-<img src="20250227_120826.jpg" width="350">
+<img class="imagee" src="20250227_120826.jpg" width="350">
   </center>
 
   <br>
