--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <a href="contactme.html">Contact Me</a>
    </nav>
   
-
+<center>
    <h1 class="bold">HOME</h1>
+  </center>
 <hr color="#ffd0d0" size="5" width="1000">
 
 
@@ -40,14 +41,14 @@
     </h1>
     
 <center>
-<img class="imagee" src="20250227_120826.jpg" width="350">
+<img class="PICTURE" src="20250227_120826.jpg" width="350">
   </center>
 
   <br>
   <br>
   <center>
 
-    <p class="textblack">Hello! My name is Sanah White and I'm currently a fullstack development student. I have created
+    <p class="textblack">Hello, My name is Sanah White and I'm currently a fullstack development student. I have created
       this website along to explain a little about myself in a personal and professional way creating a balance. I've
       interested in coding since I was 12 years old and just tech in general and hope to become a software developer or
       software engineer. </p>
