--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -81,7 +81,7 @@
 
     <div>
 
-      <img src="CFM.jpg" width="235">
+      <img src="THESMITHS.jpeg" width="235">
       <p>SABA</p>
     
     </div>
