--- a/aboutme_interest.html
+++ b/aboutme_interest.html
@@ -43,7 +43,7 @@
 
     <img src="Sh3_boxart.jpg" width="230">
 
-    <img src="ACOdysseyCoverArt.png" width="220">
+    <img src="DMC.jpg" width="205">
 
     <img src="LIS.jpeg" width="203">
   </div>
@@ -94,12 +94,23 @@
   </center>
   <div class="box2" <li> Biking is my favorite thing to do as it's calming and it'll something that will get you outside
     more and explore new places. </li>
+    <br>
+    <br>
     <div>
       <img src="47.preview.jpg" width="250">
       <img src="849.preview.jpg" width="250">
       <img src="20250225_174321.jpg" width="250" </div>
-
-    
+<h2>
+      <div class="box2" <h2>Certifications</h2>
+ </h2>
+    <div class="centerbox" <li>I earned these through the STEAM program. They're Certifications for HTML and CSS along side Network security.</li>
+<br>
+<br>
+      <div>
+        <img src="SANAHcertNS-1 2.png" width="300">
+        <img src="SANAHCert-1.png" width="300">
+        
+      </div>
 </body>
 
 </html>
