--- a/index.html
+++ b/index.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   
-    <meta name="description" content="This is Sanah's first website. It serves to inform vistors about herself and the things that she has done as a new student developer."> 
-    <meta name="keywords" content="Student, developer, Sanah, White, personal">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sanah White</title>
-   <link rel="shortcut icon" href="savesquare.jpg" type="image/x-icon">
-   <link rel="stylesheet" href="styles.CSS">
-</head>
-<body>
-   
-<nav class="navBar">
 
-  
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <meta name="description"
+    content="This is Sanah's first website. It serves to inform vistors about herself and the things that she has done as a new student developer.">
+  <meta name="keywords" content="Student, developer, Sanah, White, personal">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sanah White</title>
+  <link rel="shortcut icon" href="savesquare.jpg" type="image/x-icon">
+  <link rel="stylesheet" href="styles.CSS">
+</head>
+
+<body>
+
+  <nav class="navBar">
+
+
 
     <a href="aboutme_interest.html">About me/interest</a>
 
     <a href="projects.html">Projects</a>
 
-    <a href="https://docs.google.com/document/d/1NLwBxrL_NofczEQjIW-FROqgCKLFOt8CcbCBzdPT8c4/edit?usp=sharing" target="_blank">Resume</a>
+    <a href="https://docs.google.com/document/d/1NLwBxrL_NofczEQjIW-FROqgCKLFOt8CcbCBzdPT8c4/edit?usp=sharing"
+      target="_blank">Resume</a>
 
 
     <a href="contactme.html">Contact Me</a>
-   </nav>
-  
-<center>
-   <h1 class="bold">HOME</h1>
+  </nav>
+
+  <center>
+    <h1 class="bold">HOME</h1>
   </center>
-<hr color="#ffd0d0" size="5" width="1000">
+  <hr color="#ffd0d0" size="5" width="1000">
 
 
-  
-   
-    <center>
+
+
+  <center>
     <h1>
       <class="textblack"<h1>About me
     </h1>
-    
-<center>
-<img class="PICTURE" src="20250227_120826.jpg" width="350">
-  </center>
 
-  <br>
-  <br>
-  <center>
+    <center>
+      <img class="PICTURE" src="LINKEDIN.jpg" width="350">
+    </center>
 
-    <p class="textblack">Hello, My name is Sanah White and I'm currently a fullstack development student. I have created
-      this website along to explain a little about myself in a personal and professional way creating a balance. I've
-      interested in coding since I was 12 years old and just tech in general and hope to become a software developer or
-      software engineer. </p>
-  </center>
- 
+    <br>
+    <br>
+    <center>
+
+      <p class="textblack">Hello, My name is Sanah White and I'm currently a senior fullstack development student at the
+        STEAM center and I'm 17 years old. I first became interested in coding and tech in general at the age of 12. I
+        created this website to explain myself in a personal way while still maintaining that professional face. My
+        future career is either a software engineer or software developer because of my love for coding.
+      </p>
+    </center>
+
 
 
 
 
 </body>
-</html>
 
+</html>
