--- a/contactme.html
+++ b/contactme.html
@@ -79,6 +79,10 @@
       lucide.createIcons();
 
     </script>
+    <br>
+    <br>
+    <a href=https://www.linkedin.com/in/sanah-white-7405a9363/ target="_blank">MY LINKEDIN</a>
+
 
     <details>
       <summary>Personal website</summary>
